# battletech-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
.sqlx/: query-02734170ec4369ad633594d6b04c687d8c7d1b7dd37e712246b59428b941f311.json  query-0625025c597d803a325375cb6b548854a5b9d24f56c5d34b95ca7e6c491dcc67.json  query-3b60fa944ab6aceaa0a9ca56eb0705491879005273bcd98fbf804aa9a5dcbc1d.json  query-45ed15f856e5210c65de4d85c763848785ce7d743cc4e2bc0a97fbb0da2a59ee.json  query-4a78cb3cc182fdd98cc690a7e37f63bc0936b69b416d34150da7c6d6a6bcb8ca.json  query-555c8ed119971815050920c16e49c96705dd670443c50fc31ac4d12760504db5.json  query-5f2c8e2c8012eed509eeb20d711725d7cf68f4134f801435b96483ce15a0b055.json  query-5ff6166eef62de490ae6e45a9f959db81ba4dfa5bf82f69a407656f5d7fc1ee5.json  query-68d94e0967f25365ccba20501b6934bedfb2a3cb767cc467e180c1fb93a79059.json  query-6c5325396dd9aef363798e33ac781bcf8480b738551574a47dc19c16f0acefe9.json  query-81765a6a641bff4678161ad367a8f409601ec1e9f6766b20e647d6a4fff18236.json  query-86d8d6c6b5ee4913fb4679991b53078dd5faa54a6cd31d9abd765a9367a2cab3.json  query-8f691f755c759458d5742f8ff0eaa6245e17e3b08cc3c763c3f642ad1c28556b.json  query-a8f8836eec42f75449a32aca7e9bcc9b2e1e41285048d370505a6230e3be0ad3.json  query-b69b854cc88e1070b3080e946c6b81659d609fdeec82807e7c9d49e13f9f6fe8.json  query-b96b6283d40bac20a96de68710999adccb02ec9d45103bb425a2544dbef9b2fb.json  query-c13bae12b346973421ff4629da26432860c5b7b24c3ceb8897c085766d333113.json  query-c2c902fc19d2ee084b451d39bb54666975e4cf6d662626f6c946d1a943610ab6.json  query-e096fe520551b25ea39338943f33191e70997e9228508c83527db80e3c065f5f.json  (+2 more)
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  main.rs  metrics.rs  state.rs
crates/api/src/db/: construction.rs  equipment.rs  eras.rs  factions.rs  metadata.rs  mod.rs  models.rs  units.rs
crates/api/src/graphql/: loaders.rs  mod.rs  pagination.rs  query.rs  schema.rs
crates/api/src/graphql/types/: construction.rs  equipment.rs  era.rs  faction.rs  metadata.rs  mod.rs  unit.rs
crates/api/src/handlers/: graphql.rs  llms_txt.rs  mod.rs  ready.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: db.rs  equipment_seed.rs  main.rs  parse.rs  seed.rs
crates/scraper/src/mul/: client.rs  detail.rs  fetch.rs  import.rs  mappings.rs  matcher.rs  mod.rs  quicklist.rs
data/: equipment_stats.json
infra/: database.tf  (+8 more)
(+15 files in other folders)
