[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros", "rust_decimal"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
thiserror = "2"
config = "0.14"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "timeout", "trace"] }
tower_governor = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
